Add basic classes, images and files. Closes #1

--- a/EcoEnergyPartTwo/EcoEnergyPartTwo.csproj
+++ b/EcoEnergyPartTwo/EcoEnergyPartTwo.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
+    <Folder Include="Resources\Files\" />
+  </ItemGroup>
+
 </Project>
