--- a/EcoEnergyPartTwo/EcoEnergyPartTwo.csproj
+++ b/EcoEnergyPartTwo/EcoEnergyPartTwo.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\Images\" />
-    <Folder Include="Resources\Files\" />
+    <None Include="wwwroot\Resources\Files\consum_aigua_cat_per_comarques.csv" />
+    <None Include="wwwroot\Resources\Files\indicadors_energetics_cat.csv" />
+    <None Include="wwwroot\Resources\Images\image.png" />
   </ItemGroup>
 
 </Project>
