--- a/EcoEnergyPartTwo/EcoEnergyPartTwo.csproj
+++ b/EcoEnergyPartTwo/EcoEnergyPartTwo.csproj
@@ -12,4 +12,8 @@
     <None Include="wwwroot\Resources\Images\image.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+  </ItemGroup>
+
 </Project>
